# Tiling-Window-Manager

./: CMakeLists.txt  README.md  api.c  api.h  build.sh  config.h  events.c  events.h  input.c  input.h  instance.c  instance.h  logger.c  logger.h  main.c  restart.sh  tree.c  tree.h  types.h  util.h  wm.sh
bar/: bar.c  bar.h  block.c  block.h
